[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/pt-sans.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SoundEffects/select.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/QuestionChlenuvane/QuestionChlenuvane.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/click.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.752941, 0.45098, 0.45098, 1 )

[sub_resource type="Theme" id=5]
ItemList/colors/font_color = Color( 1, 1, 1, 1 )
ItemList/styles/bg = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 27
font_data = ExtResource( 1 )

[node name="QuestionChlenuvane" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -410, -24 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.792157, 0.6, 0.6, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SentenceTextLabel" type="RichTextLabel" parent="."]
margin_left = 200.0
margin_top = 50.0
margin_right = 879.0
margin_bottom = 139.0
custom_fonts/normal_font = SubResource( 1 )
text = "ИЗРЕЧЕНИЕ"

[node name="isAnswerCorrectLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 51.0
margin_top = 236.0
margin_right = 339.0
margin_bottom = 278.0
custom_fonts/normal_font = SubResource( 1 )
text = "текст дали е правилен отг."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 201.0
margin_top = 153.0
margin_right = 621.0
margin_bottom = 187.0
custom_fonts/normal_font = SubResource( 1 )
text = "Избери отговора с правилното членуване:"

[node name="AnswerList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -400.0
margin_right = 168.0
margin_bottom = -130.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
max_text_lines = 3
max_columns = 2
same_column_width = true

[node name="ChooseButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -71.0
margin_right = 124.5
custom_fonts/font = SubResource( 3 )
text = "Избери"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -18.159

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -11.556

[connection signal="item_selected" from="AnswerList" to="." method="_on_AnswerList_item_selected"]
[connection signal="button_down" from="ChooseButton" to="." method="_on_ChooseButton_button_down"]
